--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "prop-types": "^15.7.2",
         "react-bootstrap": "^1.0.0-beta.8",
-        "react-router-dom": "^5.0.0"
+        "react-router-dom": "^5.0.0",
+        "react-table": "^6.10.0"
     }
 }
