--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dependencies": {
         "prop-types": "^15.7.2",
         "react-bootstrap": "^1.0.0-beta.8",
+        "react-redux": "^7.0.2",
         "react-router-dom": "^5.0.0",
-        "react-table": "^6.10.0"
+        "react-table": "^6.10.0",
+        "redux": "^4.0.1"
     }
 }
